# fisrt-gtk

./: .gitignore  meson.build
data/: gtk-hello.appdata.xml  gtk-hello.desktop
src/: Application.vala
